--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,12 @@
 
 <head>
 
+
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.js"></script>
@@ -16,6 +22,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.6.0/lodash.js"></script>
   <script src="/app/main/app.js"></script>
   <script src="/app/display-images/display-images-ctrl.js"></script>
+  <script src="/app/give-date/give-date-ctrl.js"></script>
+  <script src="/app/get-annotate-images/get-annotate-images-ctrl.js"></script>
 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-carousel/0.3.10/angular-carousel.css">
