--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,8 @@
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.6.0/lodash.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.5.1/restangular.js"></script>
+  
   <script src="/app/main/app.js"></script>
   <script src="/app/display-images/display-images-ctrl.js"></script>
   <script src="/app/give-date/give-date-ctrl.js"></script>
