--- a/site/app/display-images/display-images-part.html
+++ b/site/app/display-images/display-images-part.html
@@ -1,9 +1,17 @@
 <div class="carousel-demo-fullscreen">
   <ul rn-carousel rn-carousel-controls rn-carousel-transition="hexagon" rn-carousel-index="carouselIndex" rn-carousel-buffered class="carousel1">
-    <li ng-repeat="slide in slides track by slide.id" ng-class="'id-' + slide.id">
+
+    <li ng-repeat="imageWithText in imagesWithText">
+      <div ng-style="{'background-image': 'url(' + imageWithText.imageUrl + ')'}" class="bgimage">
+        #{{ imageWithText.customMessage }}
+      </div>
+    </li>
+
+    <!-- <li ng-repeat="slide in slides track by slide.id" ng-class="'id-' + slide.id">
       <div ng-style="{'background-image': 'url(' + slide.img + ')'}" class="bgimage">
         #{{ slide.id }}
       </div>
-    </li>
+    </li> -->
+
   </ul>
 </div>
