--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
@@ -21,7 +21,7 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.6.0/lodash.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/restangular/1.5.1/restangular.js"></script>
-  
+
   <script src="/app/main/app.js"></script>
   <script src="/app/display-images/display-images-ctrl.js"></script>
   <script src="/app/give-date/give-date-ctrl.js"></script>
@@ -32,6 +32,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-carousel/0.3.10/angular-carousel.js"></script>
 
   <link rel="stylesheet" href="/vendor/angular-carousel/fullscreen.css">
+  <link rel="stylesheet" href="/app/main/style.css">
 </head>
 
 <body ng-controller="DisplayImagesCtrl">
