--- a/site/app/get-annotate-images/get-annotate-images-part.html
+++ b/site/app/get-annotate-images/get-annotate-images-part.html
@@ -1,10 +1,18 @@
 <form class="pure-form">
-  <div class="pure-g" ng-repeat="imageWithText in imagesWithText">
-    <div class="pure-u-1-4">
-      <img class="image-to-annotate" src="{{imageWithText.imageUrl}}"></img>
-    </div>
-    <div class="pure-u-1-4">
-      <input type="text" ng-model="imageWithText.customMessage" />
-    </div>
+  <div class="pure-g">
+    <div class="pure-u-1-5"></div>
+      <table class="pure-table pure-table-horizontal">
+        <tbody>
+          <tr ng-repeat="imageWithText in imagesWithText">
+            <td>
+              <img class="image-to-annotate" src="{{imageWithText.imageUrl}}"></img>
+            </td>
+            <td>
+              <input type="text" ng-model="imageWithText.customMessage" />
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
   </div>
 </form>
