--- a/site/app/give-date/give-date-part.html
+++ b/site/app/give-date/give-date-part.html
@@ -1,11 +1,8 @@
-<h4>Popup</h4>
+<h4>Hi! Whats the birthday of the awesome person you'll send this to?</h4>
 <div class="row">
   <div class="col-md-6">
     <p class="input-group">
-      <input type="text" class="form-control" datepicker-popup="{{format}}"
-        ng-model="selectedDate" is-open="opened"
-        datepicker-options="dateOptions" ng-required="true"
-        close-text="Close" />
+      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="selectedDate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
 
       <span class="input-group-btn">
         <button type="button" class="btn btn-default" ng-click="open($event)">
@@ -15,3 +12,6 @@
     </p>
   </div>
 </div>
+<button type="button" class="btn btn-default btn-lg" ng-click="submitDate()">
+<span class="glyphicon glyphicon-play" aria-hidden="true"></span> Send
+</button>
