Changed the images name to not show on accident the wrong thing.

--- a/site/app/get-annotate-images/get-annotate-images-part.html
+++ b/site/app/get-annotate-images/get-annotate-images-part.html
@@ -9,7 +9,7 @@
           <h5>Customize with your own messages before sending it to a friend.</h5>
           <table class="table ">
             <tbody>
-              <tr ng-repeat="imageWithText in imagesWithText">
+              <tr ng-repeat="imageWithText in imagesWithTextToBeFilled">
                 <td>
                   <img class="image-to-annotate" src="{{imageWithText.url}}"></img>
                 </td>
