Added the carousel display. Added license. Added another mock.

--- a/site/index.html
+++ b/site/index.html
@@ -28,11 +28,13 @@
   <script src="/app/get-annotate-images/get-annotate-images-ctrl.js"></script>
 
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-carousel/0.3.10/angular-carousel.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-carousel/0.3.10/angular-carousel.js"></script>
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-carousel/0.3.10/angular-carousel.css"> -->
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-carousel/0.3.10/angular-carousel.js"></script> -->
 
-  <link rel="stylesheet" href="/vendor/angular-carousel/fullscreen.css">
+  <!-- <link rel="stylesheet" href="/vendor/angular-carousel/fullscreen.css"> -->
   <link rel="stylesheet" href="/app/main/style.css">
+
+  <link href="/vendor/startbootstrap-full-slider-1.0.3/css/full-slider.css" rel="stylesheet">
 </head>
 
 <body ng-controller="DisplayImagesCtrl">
