--- a/site/app/display-images/display-images-part.html
+++ b/site/app/display-images/display-images-part.html
@@ -1,11 +1,31 @@
-<div class="carousel-demo-fullscreen">
-  <ul rn-carousel rn-carousel-controls rn-carousel-transition="hexagon" rn-carousel-index="carouselIndex" rn-carousel-buffered class="carousel1">
-
-    <li ng-repeat="imageWithText in imagesWithText">
-      <div ng-style="{'background-image': 'url(' + imageWithText.imageUrl + ')'}" class="bgimage">
-        #{{ imageWithText.customMessage }}
+<!-- Full Page Image Background Carousel Header -->
+<!-- start -->
+<header id="myCarousel" class="carousel slide">
+  <!-- Wrapper for Slides -->
+  <div class="carousel-inner">
+    <!-- <div class -->
+    <div class="item active">
+      <!-- Set the first background image using inline CSS below. -->
+      <div class="fill" style="background-image:url('{{currentImage.url}}');"></div>
+      <div class="carousel-caption">
+        <h2>{{currentImage.customMessage}}</h2>
       </div>
-    </li>
+    </div>
+  </div>
 
-  </ul>
-</div>
+  <!-- Controls -->
+  <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="icon-prev"></span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="icon-next"></span>
+  </a> -->
+  <a class="left carousel-control" href="" ng-click="previousPicture()">
+    <span class="icon-prev"></span>
+  </a>
+  <a class="right carousel-control" href="" ng-click="nextPicture()">
+    <span class="icon-next"></span>
+  </a>
+
+</header>
+<!-- end -->
