--- a/site/index.html
+++ b/site/index.html
@@ -41,11 +41,10 @@
 
   <div id="layout" ng-controller="MenuController">
     <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-      <!-- Hamburger icon -->
+    <!-- <a href="#menu" id="menuLink" class="menu-link">
       <span></span>
-    </a>
-
+    </a> -->
+<!--
     <div id="menu">
       <div class="pure-menu pure-menu-open">
         <ul>
@@ -53,7 +52,36 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
+
+    <!-- start nav -->
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Start Bootstrap</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li ng-repeat="header in headers">
+              <a ng-href="#{{header.link}}">{{header.text}}</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+      </div>
+      <!-- /.container -->
+    </nav>
+
+    <!-- end nav -->
 
     <div id="main">
       <div ng-view></div>
