--- a/site/app/give-date/give-date-part.html
+++ b/site/app/give-date/give-date-part.html
@@ -1,17 +1,19 @@
-<h4>Hi! Whats the birthday of the awesome person you'll send this to?</h4>
-<div class="row">
-  <div class="col-md-6">
-    <p class="input-group">
-      <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="selectedDate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+<div class="partial-wrap">
+  <h4>Hi! Whats the birthday of the awesome person you'll send this to?</h4>
+  <div class="row">
+    <div class="col-md-6">
+      <p class="input-group">
+        <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="selectedDate" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
 
-      <span class="input-group-btn">
-        <button type="button" class="btn btn-default" ng-click="open($event)">
-          <i class="glyphicon glyphicon-calendar"></i>
-        </button>
-      </span>
-    </p>
+        <span class="input-group-btn">
+          <button type="button" class="btn btn-default" ng-click="open($event)">
+            <i class="glyphicon glyphicon-calendar"></i>
+          </button>
+        </span>
+      </p>
+    </div>
   </div>
+  <button type="button" class="btn btn-default btn-lg" ng-click="submitDate()">
+    <span class="glyphicon glyphicon-play" aria-hidden="true"></span> Send
+  </button>
 </div>
-<button type="button" class="btn btn-default btn-lg" ng-click="submitDate()">
-<span class="glyphicon glyphicon-play" aria-hidden="true"></span> Send
-</button>
