Changed to redirect to displaying images directly.

--- a/site/app/display-images/display-images-part.html
+++ b/site/app/display-images/display-images-part.html
@@ -8,10 +8,12 @@
       <!-- Set the first background image using inline CSS below. -->
       <div class="fill" style="background-image:url('{{currentImage.url}}');"></div>
       <div class="carousel-caption">
-        <h2>{{currentImage.customMessage}}</h2>
+        <!-- <h2>{{currentImage.customMessage}}</h2> -->
+        <p>{{currentImage.customMessage}}</p>
       </div>
     </div>
   </div>
+
 
   <!-- Controls -->
   <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
