--- a/site/index.html
+++ b/site/index.html
@@ -35,6 +35,7 @@
   <link rel="stylesheet" href="/app/main/style.css">
 
   <link href="/vendor/startbootstrap-full-slider-1.0.3/css/full-slider.css" rel="stylesheet">
+  <title>Share Space Science</title>
 </head>
 
 <body ng-controller="DisplayImagesCtrl">
@@ -66,7 +67,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Start Bootstrap</a>
+          <a class="navbar-brand" href="#">Share Space Science</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
